# aether-link

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: aether_bench.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  NVIDIA_INTEGRATION.md  QUANTUM_THEORY.md
docs/AETHER Core/extract_telemetry/base/: benchmark.json  estimates.json  sample.json
docs/AETHER Core/extract_telemetry/new/: tukey.json
docs/AETHER Core/prepare_quantum_state/base/: benchmark.json
docs/AETHER Core/prepare_quantum_state/new/: estimates.json  sample.json  tukey.json
docs/AETHER Core/process_io_cycle/base/: estimates.json
docs/AETHER Core/process_io_cycle/new/: benchmark.json  sample.json  tukey.json
docs/AETHER Presets/Gaming Cycle/base/: estimates.json  sample.json
docs/AETHER Presets/Gaming Cycle/new/: benchmark.json  tukey.json
docs/AETHER Presets/HFT Cycle/base/: estimates.json  sample.json
docs/AETHER Presets/HFT Cycle/new/: benchmark.json  tukey.json
docs/Fast Math/fast_atan/base/: benchmark.json  sample.json
docs/Fast Math/fast_atan/new/: estimates.json  tukey.json
docs/Fast Math/fast_exp/base/: benchmark.json  sample.json
docs/Fast Math/fast_exp/new/: estimates.json  tukey.json
docs/Fast Math/fast_sigmoid/base/: benchmark.json  estimates.json  sample.json  tukey.json
docs/Stream Size Scaling/10/base/: estimates.json  sample.json  tukey.json
docs/Stream Size Scaling/10/new/: benchmark.json
docs/Stream Size Scaling/100/base/: benchmark.json  estimates.json  sample.json  tukey.json
docs/Stream Size Scaling/1000/base/: estimates.json  tukey.json
docs/Stream Size Scaling/1000/new/: benchmark.json  sample.json
docs/Stream Size Scaling/10000/base/: benchmark.json  sample.json  tukey.json
docs/Stream Size Scaling/10000/new/: estimates.json
docs/Throughput/1M cycles/base/: estimates.json  tukey.json
docs/Throughput/1M cycles/new/: benchmark.json  sample.json
examples/: basic_usage.rs  gaming.rs  hft_preset.rs  streaming_io.rs  tokio_integration.rs
src/: fast_math.rs  lib.rs
