[package]
name = "aether-link"
version = "0.2.0"
edition = "2021"
authors = ["Teerth Sharma <teerthsharma@users.noreply.github.com>"]
description = "🚀 Ultra-fast I/O Super-Kernel with Adaptive POVM-based Prefetching for HFT, DirectStorage & WSL2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/teerthsharma/aether-link"
homepage = "https://github.com/teerthsharma/aether-link"
documentation = "https://docs.rs/aether-link"
readme = "README.md"
keywords = ["io", "prefetch", "nvme", "directstorage", "kernel", "async", "tokio"]
categories = ["hardware-support", "algorithms", "os", "asynchronous"]
rust-version = "1.70"

[features]
default = []
windows-directstorage = ["windows"]
tokio-runtime = ["tokio/rt", "tokio/rt-multi-thread", "tokio/sync", "dep:tokio"]

[dependencies]
libm = "0.2"
windows = { version = "0.52", features = [
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Direct3D12",
    "Win32_Foundation",
    "Win32_System_IO",
], optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "aether_bench"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "streaming_io"
path = "examples/streaming_io.rs"

[[example]]
name = "tokio_integration"
path = "examples/tokio_integration.rs"
required-features = ["tokio-runtime"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1
